--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -42,7 +42,7 @@ $textGrey: #5a7184;
         margin-right: 2px;
       }
     }
-    #scylla-details {
+    .details__wrapper {
       padding-left: 14px;
     }
     .tech-specs {
